Fixed an error wth missing curlybraces, and image spacing on cards

--- a/assets/style.css
+++ b/assets/style.css
@@ -48,6 +48,8 @@ body {
     display: inline-block;
 }
 
+
+
 #quote{
     text-align: center;
     font-size: 25px;
@@ -71,6 +73,6 @@ h1{
     justify-content: center;
 }
 
-.card-image {
+.parkImg {
     width: 400px;
 }
